# gen-interface-jp-rs

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  clippy.toml  justfile  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/gen-font/: Cargo.toml
crates/gen-font/src/: baker.rs  build.rs  classify.rs  families.rs  glyph.rs  glyph_spacing.rs  lib.rs  palt.rs  proportional.rs  site_subset.rs  strip_extreme.rs  tracking.rs  weights.rs  x_scale.rs
crates/gen-font/tests/: test_build_smoke.rs  test_classify_and_proportional.rs  test_classify_glyph_sets.rs  test_palt_integration.rs  test_roundtrip.rs  test_strip_extreme_integration.rs  test_tracking_integration.rs
crates/gen-release/: Cargo.toml
crates/gen-release/src/: build.rs  github.rs  lib.rs  npm.rs  release_zip.rs  version.rs
crates/gen-webfont/: Cargo.toml
crates/gen-webfont/src/: build_runner.rs  cmap.rs  css.rs  families.rs  google_japanese.rs  jis.rs  lib.rs  manifest.rs  nam.rs  plan.rs  ranges.rs  subset.rs
crates/gen-webfont/tests/: test_webfont.rs
docs/: ARCHITECTURE.ja.md  ARCHITECTURE.md  WRITE_FONTS_NOTES.md
