[workspace]
resolver = "2"
members = [
    "crates/gen-font",
    "crates/gen-webfont",
    "crates/gen-release",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Yamato Iizuka"]
repository = "https://github.com/yamatoiizuka/gen-interface-jp"

[workspace.dependencies]
skrifa = "0.36"
read-fonts = "0.34"
write-fonts = "0.42"
font-types = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
zip = "2"
walkdir = "2"
flate2 = "1"
brotli = "7"
regex = "1"
encoding_rs = "0.8"
rayon = "1"
