[workspace]
resolver = "2"
members = [
    "crates/gen-font",
    "crates/gen-webfont",
    "crates/gen-release",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Yamato Iizuka"]
repository = "https://github.com/yamatoiizuka/gen-interface-jp"

[workspace.dependencies]
skrifa = "0.42"
read-fonts = "0.39"
write-fonts = "0.48"
font-types = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
zip = "2"
walkdir = "2"
flate2 = "1"
brotli = "7"
regex = "1"
encoding_rs = "0.8"
rayon = "1"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# allow some pedantic lints that are too noisy for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
similar_names = "allow"
too_many_lines = "allow"
format_push_string = "allow"
no_effect_underscore_binding = "allow"
used_underscore_binding = "allow"
items_after_statements = "allow"
field_reassign_with_default = "allow"
unnecessary_wraps = "allow"
struct_excessive_bools = "allow"
diverging_sub_expression = "allow"
erasing_op = "allow"
needless_borrows_for_generic_args = "allow"
single_char_pattern = "allow"
single_char_add_str = "allow"
manual_div_ceil = "allow"
redundant_closure_for_method_calls = "allow"
wildcard_imports = "allow"
assertions_on_constants = "allow"
semicolon_if_nothing_returned = "allow"
doc_lazy_continuation = "allow"
