[package]
name = "gen-font"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "gen_font"
path = "src/lib.rs"

[[bin]]
name = "font_build"
path = "src/bin/font_build.rs"

[dependencies]
skrifa.workspace = true
read-fonts.workspace = true
write-fonts.workspace = true
font-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true

[dev-dependencies]
