[package]
name = "gen-release"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "gen_release"
path = "src/lib.rs"

[[bin]]
name = "release_build"
path = "src/bin/release_build.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
zip.workspace = true
walkdir.workspace = true
regex.workspace = true
gen-font = { path = "../gen-font" }
