[package]
name = "gen-webfont"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "gen_webfont"
path = "src/lib.rs"

[[bin]]
name = "webfont_build"
path = "src/bin/webfont_build.rs"

[dependencies]
skrifa.workspace = true
read-fonts.workspace = true
write-fonts.workspace = true
font-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
regex.workspace = true
encoding_rs.workspace = true
rayon.workspace = true
brotli.workspace = true
flate2.workspace = true

[dev-dependencies]
